--- a/test.html
+++ b/test.html
@@ -28,6 +28,7 @@
 
 <body>
 	<nav id="nav" class="sidebar p-3 text-white bg-dark">
+		
 		<div class="sidebar-content w-100 px-md-3 d-flex flex-column h-100">
 			<a href="/" class="text-white text-decoration-none">
 				<div class="w-100 text-center">
@@ -36,50 +37,10 @@
 				</div>
 			</a>
 			<div class="menu flex-fill" style="overflow-y: scroll;">
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
-				very long menu<br>
+				<h3>Classes</h3><ul><li><a href="Artibot.html">Artibot</a></li><li><a href="BasePart.html">BasePart</a></li><li><a href="Button.html">Button</a></li><li><a href="Command.html">Command</a></li><li><a href="Embed_Embed.html">Embed</a></li><li><a href="Global_.html">Global</a></li><li><a href="MessageContextMenuOption.html">MessageContextMenuOption</a></li><li><a href="Module.html">Module</a></li><li><a href="module_.html#.exports">exports</a></li><li><a href="SelectMenuOption.html">SelectMenuOption</a></li><li><a href="SlashCommand.html">SlashCommand</a></li><li><a href="TriggerGroup_TriggerGroup.html">TriggerGroup</a></li><li><a href="UserContextMenuOption.html">UserContextMenuOption</a></li></ul><h3>Global</h3><ul><li><a href="global.html#escapeRegex">escapeRegex</a></li><li><a href="global.html#execute">execute</a></li><li><a href="global.html#log">log</a></li></ul>
 			</div>
 		</div>
+	
 	</nav>
 
 	<div class="content">
